src/app/public/sass/_find.scss
@charset "utf-8";

.find {
  &__media {
    min-height: 80px;
  }

  // &_pict-tweet--container {

  // }

  &__divider {
    margin: 30px 0;
    width: 100%;
    border-bottom: 1px solid rgba($link-color, 0.4);
    box-shadow: rgba(255, 255, 255, 0.5) 0 1px 0 inset;
  }

  &__pict__container {
    background: $link-color;
    height: 200px;
  }

  &__pict-tweet--img__container {
    display: inline-block;
    padding: 8px;

    // (100 / 12 ) * 2 = 16.6
    @media (min-width: 1600px) {
      width: 16.6%;
    }
  }

  &__pict-tweet--img {
    @include crop-image(200px);
  }
}

